--- a/themes/polk/source/css/_partial/archive.styl
+++ b/themes/polk/source/css/_partial/archive.styl
@@ -20,10 +20,10 @@
       }
 
       .post-title {
-        border-bottom: 1px dotted #000;
+        border-bottom: 1px dotted;
 
         &:hover {
-          border: 0;
+          border-bottom: 1px solid;
         }
       }
     }
