--- a/themes/polk/source/css/_partial/post.styl
+++ b/themes/polk/source/css/_partial/post.styl
@@ -25,10 +25,10 @@
     word-break: break-all;
 
     a {
-      border-bottom: 1px dotted #000;
+      border-bottom: 1px dotted;
 
       &:hover {
-        border: 0;
+        border-bottom: 1px solid;
       }
     }
 
