--- a/themes/polk/source/css/_partial/archive.styl
+++ b/themes/polk/source/css/_partial/archive.styl
@@ -6,7 +6,7 @@
 
 .archive {
   padding: 0 20px;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 
   .post-archive {
     list-style: none;
@@ -14,9 +14,17 @@
 
     .post-item {
       margin: 6px 0;
+      line-height: 1.5;
 
       .post-date {
         float: right;
+      
+        @media screen and (max-width: 425px) {
+          float: none;
+          margin-left: 0.5em;
+          font-size: 90%;
+          color: #999;
+        }
       }
 
       .post-title {
