--- a/themes/polk/source/css/style.styl
+++ b/themes/polk/source/css/style.styl
@@ -41,8 +41,9 @@ a {
       margin: 1em auto;
 
       a {
-        margin: 0.5em;
+        width: 50px;
         color: #999;
+        display: inline-block;
 
         &:hover {
           color: #000;
@@ -53,13 +54,18 @@ a {
     footer {
       border: 0;
       color: #000;
+      padding: 0;
     }
   }
 }
 
 .page {
   margin: 0 20px;
-  margin-bottom: 2em;
+  margin-bottom: 1.5em;
+  
+  p {
+    line-height: 1.5em;
+  }
 }
 
 @import "_partial/header";
