--- a/themes/polk/source/css/_partial/post.styl
+++ b/themes/polk/source/css/_partial/post.styl
@@ -89,19 +89,22 @@
     line-height: 1;
     min-height: 1em;
 
-    .top {
-      float: right;
+    a {
       color: #666;
 
       &:hover {
         color: #000;
       }
     }
+    
+    .top {
+      float: right
+    }
 
     .post-tag-list {
       display: inline-block;
       padding: 0;
-      margin: 0 0 0.5em 0;
+      margin-top: 0;
       color: #999;
 
       .post-tag-list-item {
