--- a/themes/polk/source/css/_partial/post.styl
+++ b/themes/polk/source/css/_partial/post.styl
@@ -25,6 +25,7 @@
     word-break: break-all;
 
     a {
+      color: #d94240;
       border-bottom: 1px dotted;
 
       &:hover {
@@ -112,6 +113,7 @@
         margin: 0 1em 0 0;
 
         a {
+          color: #d94240;
           font-size: 85%;
         }
 
