--- a/themes/polk/source/css/style.styl
+++ b/themes/polk/source/css/style.styl
@@ -4,7 +4,8 @@ body {
 
 html, body, .container {
   height: 100%;
-  font-family: Hiragino Sans GB, Microsoft YaHei, WenQuanYi, Airal, sans-serif;;
+  font-family: Hiragino Sans GB, Microsoft YaHei, WenQuanYi, Airal, sans-serif;
+  color: #444;
 }
 
 .container {
