--- a/themes/polk/layout/page.ejs
+++ b/themes/polk/layout/page.ejs
@@ -8,7 +8,9 @@
   </div>
   <div class="page-footer">
     <a href="javascript:void(0)" class="load"><%= __('Post.Load') %></a>
-    <a href="#top" class="top"><%= __('Post.Top') %></a>
+    <a href="javascript:void(0)" class="top"><%= __('Post.Top') %></a>
   </div>
+  
+  <section id="isso-thread"></section>
 </div>
 <%- partial('_partial/footer') %>
