--- a/themes/polk/layout/_partial/footer.ejs
+++ b/themes/polk/layout/_partial/footer.ejs
@@ -2,16 +2,16 @@
   window.onload = function() {
     // Load comment
     document.getElementsByClassName('load')[0] && document.getElementsByClassName('load')[0].addEventListener('click', function() {
-      if (!document.getElementById('issoScript')) {
-        script = document.createElement('script');
-        script.id = 'issoScript';
-        script.src = 'http://www.chunqiuyiyu.com/isso/js/embed.min.js';
-        script.setAttribute('data-isso', 'http://www.chunqiuyiyu.com/isso/');
-        script.setAttribute('data-isso-vote', 'false');
-        script.setAttribute('data-isso-css', 'false');
+      if (!document.getElementById('hashoverScript')) {
+        var script = document.createElement('script');
+        script.id = 'hashoverScript';
+        script.src = 'http://www.chunqiuyiyu.com/hashover/comments.php';
         script.asyc = true;
 
-        document.body.appendChild(script);
+        var parent = document.getElementsByClassName('page')[0] || 
+          document.getElementsByClassName('post')[0] || document.body;
+
+        body.appendChild(script); 
       }
     });
 
