Fix error of load hashover script

--- a/themes/polk/layout/_partial/footer.ejs
+++ b/themes/polk/layout/_partial/footer.ejs
@@ -11,7 +11,7 @@
         var parent = document.getElementsByClassName('page')[0] || 
           document.getElementsByClassName('post')[0] || document.body;
 
-        body.appendChild(script); 
+        parent.appendChild(script); 
       }
     });
 
