--- a/themes/polk/layout/_partial/head.ejs
+++ b/themes/polk/layout/_partial/head.ejs
@@ -50,5 +50,4 @@
     <link rel="alternate" href="<%= url_for(theme.rss) %> " title="<%= config.title %>" type="application/atom+xml">
   <% } %>
 
-  <%- css('/css/style.css') %>
-</head>
+  <%- css('/css/style.css?v=1.03') %></head>
