--- a/themes/polk/layout/_partial/footer.ejs
+++ b/themes/polk/layout/_partial/footer.ejs
@@ -11,7 +11,8 @@
         var parent = document.getElementsByClassName('page')[0] || 
           document.getElementsByClassName('post')[0] || document.body;
 
-        parent.appendChild(script); 
+        parent.appendChild(script);
+        var hashover = new Hashover();
       }
     });
 
