--- a/themes/polk/layout/page.ejs
+++ b/themes/polk/layout/page.ejs
@@ -1,14 +1,19 @@
 <%- partial('_partial/header') %>
-<div class="page">
-  <div class="page-title">
-    <h1 class="article-title"><%= page.slug %></h1>
-  </div>
-  <div class="page-content">
-    <%- page.content %>
-  </div>
-  <div class="page-footer">
-    <a href="javascript:void(0)" class="load"><%= __('Post.Load') %></a>
-    <a href="javascript:void(0)" class="top"><%= __('Post.Top') %></a>
-  </div>
-</div>
+  <% if (page.type === 'nav') { %>
+    <%- partial('_partial/nav') %>
+  <% } else { %>
+    <div class="page">
+      <div class="page-title">
+        <h1 class="article-title"><%= page.slug %></h1>
+      </div>
+      <div class="page-content">
+        <%- page.content %>
+      </div>
+      <div class="page-footer">
+        <a href="javascript:void(0)" class="load"><%= __('Post.Load') %></a>
+        <a href="javascript:void(0)" class="top"><%= __('Post.Top') %></a>
+      </div>
+    </div>
+  <% } %>
+  
 <%- partial('_partial/footer') %>
