Add RSS and Nav page

--- a/themes/polk/layout/_partial/footer.ejs
+++ b/themes/polk/layout/_partial/footer.ejs
@@ -1,7 +1,7 @@
 <footer>
   &copy; <%= date(new Date(), 'YYYY') %>
-  <span class="author">
+  <a class="author" href='/'>
     <%= config.author || '' %>
-  </span>
+  </a>
 </footer>
 <%- js('/js/utils.js') %>
