Fix error of style

--- a/themes/polk/source/css/_partial/nav.styl
+++ b/themes/polk/source/css/_partial/nav.styl
@@ -24,6 +24,8 @@
       border: none;
       border-bottom: 1px dotted;
       font-size: 1.2em;
+      padding: 0;
+      margin: 0;
       
       &:focus {
         border-bottom: 1px solid #d94240;
