--- a/themes/polk/layout/post.ejs
+++ b/themes/polk/layout/post.ejs
@@ -23,5 +23,5 @@
     </div>
   </div>
 </article>
-<%- js('/js/utils.min.js') %>
+<%- js('/js/utils.min.js?v=1.01') %>
 <%- partial('_partial/footer') %>
