Modify the style so that the code can automatically wrap

--- a/themes/polk/source/css/_partial/post.styl
+++ b/themes/polk/source/css/_partial/post.styl
@@ -76,6 +76,8 @@
     line-height: 1.8;
     background-color: #f7f7f7;
     border: 1px solid #ccc;
+    white-space: pre-wrap;
+    word-break: break-word;
   }
 
   code {
