Remove hexo-offline plugin

--- a/themes/polk/layout/_partial/nav.ejs
+++ b/themes/polk/layout/_partial/nav.ejs
@@ -1,7 +1,7 @@
 <div class="page">
   <h1>Nav</h1>
   <div class="search">
-    <input type="text" name="search" placeholder="搜索" id="local-search-input">
+    <input type="text" autocomplete="off" name="search" placeholder="搜索" id="local-search-input">
     <div id="local-search-result"></div>
   </div>
   
