--- a/themes/polk/layout/page.ejs
+++ b/themes/polk/layout/page.ejs
@@ -17,6 +17,6 @@
   <% } %>
 
 <% if (page.type !== 'index') { %>
-  <%- js('/js/utils.min.js?v=1.02') %>
+  <%- js('/js/utils.js?v=1.02') %>
 <% } %>
 <%- partial('_partial/footer') %>
