--- a/themes/polk/layout/post.ejs
+++ b/themes/polk/layout/post.ejs
@@ -23,5 +23,5 @@
     </div>
   </div>
 </article>
-<%- js('/js/utils.min.js?v=1.02') %>
+<%- js('/js/utils.js?v=1.02') %>
 <%- partial('_partial/footer') %>
