Add old articles

--- a/themes/polk/source/css/_partial/post.styl
+++ b/themes/polk/source/css/_partial/post.styl
@@ -37,6 +37,9 @@
 
       li {
         padding: 5px;
+        img {
+          margin-top: 1em;
+        }
         
         p {
           margin: 0;
@@ -82,7 +85,6 @@
 
   code {
     background: #f7f7f7;
-    border: 1px solid #d6d6d6;
     font-family: inherit;
     font-size: 90%;
     margin: 5px;
