--- a/themes/samljen/layout/_partial/footer.ejs
+++ b/themes/samljen/layout/_partial/footer.ejs
@@ -7,7 +7,7 @@
       &copy; <%= date(new Date(), 'YYYY') %>
       <a class="author" href='/'>
         <%= config.author || '' %>
-      </a>. All Right Reserved. 
+      </a>. All Rights Reserved. 
     </div>
   </div>
 </footer>
